Fixed spacing on description

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -507,8 +507,17 @@ width: 100%;
 }
 
 .video-description {
+  line-height: 100px;
+  width: 350px;
+  height: 150px;
   text-align: center;
+}
 
+
+.video-description h3 {
+  display: inline-block;
+  vertical-align: middle;
+  line-height: normal;  
 }
 
 /* CONTACT */
